# abstract-bits

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
abstract-bits-derive/: Cargo.toml
abstract-bits-derive/src/: codegen.rs  lib.rs  model.rs
abstract-bits-derive/src/codegen/: enumerate.rs  fields.rs  needed_bits.rs  read.rs  write.rs
abstract-bits-derive/src/codegen/fields/: array.rs  control_list.rs  control_option.rs  list.rs  normal.rs  option.rs  padding.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ser_than_de.rs
src/: error.rs  lib.rs
tests/: bitfield.rs  complex.rs  end_on_empty_vec.rs  enum.rs  from_ziggurat.rs  fuzz_case1.rs  link_status_command.rs  option.rs  validation_errors.rs
