[package]
name = "abstract-bits"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

readme = "README.md"
description = "Turn any combination of bit and byte fields into a structs"
repository = "https://github.com/dvdsk/abstract-bits"

license = "Apache-2.0 & MIT"
authors = ["David Kleingeld"]

[dependencies]
arbitrary-int = "1.3.0"
bitvec = "1.0.1"
thiserror = "2.0.12"
abstract-bits-derive = { path = "abstract-bits-derive" }

[dev-dependencies]
color-eyre = "0.6.4"
